@@ -1,5 +1,12 @@
 2013-09-24 Philipp Klaus Krause <pkk AT spth.de>
 
+	* src/z80/gen.c,
+	  src/stm8/gen.c,
+	  support/regression/tests/bug-2222.c:
+	  Fix bugs #2222, 2223.
+
+2013-09-24 Philipp Klaus Krause <pkk AT spth.de>
+
 	* src/SDCCralloc.hpp,
 	  src/SDCClrange.c:
 	  Check more carefully for undead hiding among the living variables.
